Revision history for Perl extension ExtUtils::CBuilder.

0.03

 - Fixed minor problems with the Build.PL file, the module names
   should be quoted.

0.02  Fri Feb 20 10:17:40 CST 2004

 - Fixed a bug in .../Platform/Windows.pm, in which compile() was
   ignoring an 'include_dirs' argument.  [Randy Sims]

 - Fixed a bug in .../Platform/Windows.pm, in which output files were
   being created in the root directory \ when they should be created
   in the current directory. [Randy Sims]

0.01  Mon Jan 12 08:12:35 CST 2004

 - Original release, taken from Module::Build's C-building code, with
   patching help from Randy Sims.