@@ -5,6 +5,8 @@ Revision history for Perl extension ExtUtils::CBuilder.
  - Fixed minor problems with the Build.PL file, the module names
    should be quoted.
 
+ - The VMS module declared itself with the wrong package name.
+
 0.02  Fri Feb 20 10:17:40 CST 2004
 
  - Fixed a bug in .../Platform/Windows.pm, in which compile() was
